Finished JWT Authentication. Added Endpoint Guards for User Roles

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # Database
-spring.datasource.url=jdbc:postgresql://localhost:3306/easyexam
+spring.datasource.url=jdbc:postgresql://localhost/easyexam_db
 spring.datasource.username=easyexam
 spring.datasource.password=easyexam
 spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+
 # Server
-#server.port=8080
+server.port=8080
 #server.servlet-path=/api
 #server.context-path=/api
 
@@ -20,3 +22,7 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+# JWT
+easyexam.jwtSecret=MXsj14AJSw7JyU
+easyexam.jwtExpiration=86400
