added ElasticSearch configs and logstash for syncing Postgres to ElasticSearch. Updated docs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,19 @@
-# Database
+# Postgres
 spring.datasource.url=jdbc:postgresql://localhost/easyexam_db
 spring.datasource.username=easyexam
 spring.datasource.password=easyexam
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
+# ElasticSearch
+elasticsearch.host=localhost
+elasticsearch.port=9300
+
+# Logstash
+logging.file=application.log
+
 # Server
 server.port=8080
-#server.servlet-path=/api
-#server.context-path=/api
 
 security.oauth2.resource.filter-order=3
 
