Changed UNIX_TIMESTAMP for EXTRACT

--- a/logstash/logstash-questions.conf
+++ b/logstash/logstash-questions.conf
@@ -6,7 +6,7 @@ input {
         jdbc_user => "easyexam"
         jdbc_password => "easyexam"
 		schedule => "*/5 * * * * *"
-        statement => "SELECT *, UNIX_TIMESTAMP(updated) AS unix_ts_in_secs FROM questions WHERE (UNIX_TIMESTAMP(updated) > :sql_last_value AND updated < NOW()) ORDER BY updated ASC"
+        statement => "SELECT *, EXTRACT(EPOCH from updated) AS unix_ts_in_secs FROM questions WHERE (EXTRACT(EPOCH from updated) > EXTRACT(EPOCH FROM TIMESTAMP :sql_last_value) AND updated < NOW()) ORDER BY updated ASC"
     }
 }
 
