Started latex compiler. Created Exam creation endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Postgres
-spring.datasource.url=jdbc:postgresql://localhost/easyexam_db
-spring.datasource.username=easyexam
-spring.datasource.password=easyexam
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_DB:easyexam_db}
+spring.datasource.username=${POSTGRES_USER:easyexam}
+spring.datasource.password=${POSTGRES_PASS:easyexam}
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 
@@ -13,7 +13,7 @@ elasticsearch.port=9300
 logging.file=application.log
 
 # Server
-server.port=8080
+server.port=5000
 
 security.oauth2.resource.filter-order=3
 
@@ -27,6 +27,12 @@ security.jwt.grant-type=password
 security.jwt.scope-read=read
 security.jwt.scope-write=write
 security.jwt.resource-ids=testjwtresourceid
+
+# Hibernate
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+hibernate.show_sql=false
+hibernate.format_sql=false
+hibernate.hbm2ddl.auto=update
 
 # JWT
 easyexam.jwtSecret=MXsj14AJSw7JyU
