Fixed Authentication Bug. Added latex compilation endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,8 +15,6 @@ logging.file=application.log
 # Server
 server.port=5000
 
-security.oauth2.resource.filter-order=3
-
 security.signing-key=MaYzkSjmkzPC57L
 security.encoding-strength=256
 security.security-realm=Easy Exam Backend
@@ -35,5 +33,6 @@ hibernate.format_sql=false
 hibernate.hbm2ddl.auto=update
 
 # JWT
-easyexam.jwtSecret=MXsj14AJSw7JyU
+jwt.secret=JXDi14AMSw9J1U
+easyexam.jwtSecret=JXDi14AMSw9J1U
 easyexam.jwtExpiration=86400
